v14-argo-rollouts-analysis/canary-analysis/rollout-with-analysis.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-setweight
spec:
  replicas: 5
  strategy:
    canary:
    # analysis:      #### This is a Backgound Analysis
    #    templates:
    #    - templateName: success-rate
    #    args:
    #      - name: service_port #### This is the variable related to the port of analysis-app.py flask app
    #        value: "5001"
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10s}
      - analysis: #### This is an Inline Analysis
          templates:
          - templateName: success-rate
          args:
          - name: service_port #### This is the variable related to the port of analysis-app.py flask app
            value: "5001"
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 1m}
  selector:
    matchLabels:
      app: rollouts-setweight
  template:
    metadata:
      labels:
        app: rollouts-setweight
    spec:
      containers:
      - name: rollouts-setweight
        image: canary # This is the same image that we built in blue-green session , I just re-tagged it
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-setweight
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: rollouts-setweight
